--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -8,6 +8,11 @@
             background-color: #b8d6e0; /* #ADD8E6 or #cceefd light blue */
         }
 
+        @media screen and (max-width: 600px) {
+                nav li a {
+                    padding: 20px 8px;
+                }
+            }
 
         h1 {
             font-family: 'Helvetica Rounded', 'Arial Rounded MT Bold', sans-serif;
