--- a/polls/static/polls/style.css
+++ b/polls/static/polls/style.css
@@ -1,8 +1,27 @@
 
+h1 {
+    font-family: 'Helvetica Rounded', 'Arial Rounded MT Bold', sans-serif;
+    font-weight: bolder;
+    text-align: center;
+    font-size: 60px;
+}
+
+ul {
+    position: absolute;
+    top: 100px;
+    left: 0;
+    right: 0;
+}
+
+
 li a {
-    color: pink;
+    color: rgb(0, 0, 0);
+    font-size: 50px;
+    font-weight: bolder;
+
 }
 
 body {
-    background: white url("images/background.png") no-repeat;
+    background: white url("images/questionMarks2.png") no-repeat;
+    background-size: cover;
 }
